--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<div class="login-container">
+<div class="container">
     <div class="card">
         <div class="card-header">
             <h3 class="text-center">{{title}}</h3>
