--- a/views/partials/paginar.hbs
+++ b/views/partials/paginar.hbs
@@ -11,7 +11,7 @@
     {{/if}}
     {{#each paginacion.paginas}}
     {{#if this.activo}}
-    <li class="active">
+    <li class="active orange">
     {{else}}
     <li >
     {{/if}}
