--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -39,25 +39,21 @@
       <i class="material-icons">account_box</i>Gestionar usuarios
     </a>
   </li>
-  <!--
   <li>
-    <a href="/sales" class="waves-effect">
+    <a href="/puestos/ventasAdm" class="waves-effect">
       <i class="material-icons">shopping_cart</i>Gestionar ventas
     </a>
   </li>
-  -->
   <li>
     <a href="/puestos" class="waves-effect">
       <i class="material-icons">inventory</i>Gestionar puestos
     </a>
   </li>
-  <!--
   <li>
-    <a href="/suppliers" class="waves-effect">
+    <a href="/galeria/galeriaAdm" class="waves-effect">
       <i class="material-icons">burst_mode</i>Gestionar galeria
     </a>
   </li>
-  -->
   <li>
     <a href="/cliente" class="waves-effect">
       <i class="material-icons">people</i>Gestionar Clientes
